SERVER-17984 doTTLForIndex() delete with manual index scan